// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-zjtvhu-0 cdLiUD"
>
  <h1
    class="profiles__Title-sc-zjtvhu-1 gPkjpv"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-zjtvhu-2 hwJMEw"
  >
    <li
      class="profiles__Item-sc-zjtvhu-5 bMTfEy"
    >
      <img
        class="profiles__Picture-sc-zjtvhu-4 bAFKxb"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-zjtvhu-3 cjaGds"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-zjtvhu-0 cdLiUD"
>
  <h1
    class="profiles__Title-sc-zjtvhu-1 gPkjpv"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-zjtvhu-2 hwJMEw"
  >
    <li
      class="profiles__Item-sc-zjtvhu-5 bMTfEy"
    >
      <img
        class="profiles__Picture-sc-zjtvhu-4 bAFKxb"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-zjtvhu-3 cjaGds"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
